# tunly

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: 2026-07-05-ssh-socks-tray-design.md  2026-07-05-tunly-design.md  GUIDE.md
packaging/: ssh-socks-tray.in  tunly.in
packaging/aur/: PKGBUILD
packaging/deb/: build-deb.sh  control
src/ssh_socks_tray/: __init__.py
src/ssh_socks_tray/data/: ssh-socks-tray.desktop
src/tunly/: __init__.py
src/tunly/data/: tunly.desktop
tests/: test_tunly.py
